tinker on waybar

--- a/stow/dot-config/waybar/style.css
+++ b/stow/dot-config/waybar/style.css
@@ -267,6 +267,11 @@ window#waybar {
     border-bottom-color: @disk-color;
 }
 
+#custom-nvidia {
+    color: @blue;
+    border-bottom-color: @red;
+}
+
 #custom-uptime {
     color: @uptime-color;
     border-bottom-color: @uptime-color;
